# cigar-price-scout

./: .env  .gitignore  .replit  AGENTS.md  AI_WORKFLOW_INSTRUCTIONS.md  AUTOMATION_SETUP.md  CIGAR_AUTOMATION_TRANSITION_PACKAGE.md  CIGAR_PROMOTIONAL_SYSTEM_TRANSITION_PACKAGE.md  Cigora-Cigora_Products_Feed_2-shopping.txt  DORMANT_RETAILERS.md  EXECUTION_COMPLETE.md  POPULATION_SUMMARY.md  SEO_CONTENT_PRIORITY.md  SEO_IMPLEMENTATION_PLAN.md  TIER1_SEO_DEPLOYMENT_SUMMARY.md  TRANSITION_PACKAGE.md  add_new_affiliate_entry.py  affiliate_compliance_checklist.md  affiliate_links.txt  audit_summary_20251116_173205.txt  auto_normalizer.py  automation_runner.py  bulk_import.py  cccrafter_products.csv  check_cigar_csv.py  cid_expansion_summary.md  cid_mismatches_20251116_173205.csv  cj_test.py  comprehensive_opus_x_integration.py  comprehensive_opus_x_integration_windows.py  cpsc_competitive_analysis_debug.py  cpsc_out_retailer_rank_matrix.csv  csv_updater_script.py  data.db  debug_cigar_csv_manager.py  debug_email_context.py  debug_html_arturo-fuente-hemingway-natural-classic-7-x-46.html  debug_html_padron-1964-anniversary-diplomat-maduro-50-x-7-cigars.html  debug_html_padron-1964-anniversary-diplomat-maduro-50-x-7.html  debug_html_romeo-y-julieta-1875-churchill-cigar-50-x-7.html  (+44 more)
app/: CIGAR_AUTOMATION_TRANSITION_PACKAGE.md  CIGAR_AUTOMATION_TRANSITION_PACKAGE_v2.md  CIGAR_AUTOMATION_TRANSITION_PACKAGE_v3.md  affiliate.py  automation_master.py  cid_matcher.py  community_endpoints.py  copy_deployment_files.py  db.py  debug_csv_update.py  (+95 more)
automation/: Dockerfile  email_env.py  (+16 more)
(+1141 files in other folders)
